== 0.x.y / yyyy-mm-dd
* rename GemInstaller.run method to GemInstaller.install, keep run as an alias for install
* add‍warning‍if‍a‍gem‍version‍error‍is‍detected,‍with instructions‍to‍run‍geminstaller‍to‍install‍the‍missing‍version
* Rubygems‍1.x‍compatibility
* better internal support for uninstall options
* use‍new,‍correct‍x86-mswin32‍format‍for‍mswin32‍platform‍gems
* update‍warning‍message‍for‍older‍rubygems‍versions
* made tests run on Mac OS X Leopard w/RubyGems 1.0.1
== 0.3.0 / 2008-01-01
* Changes to work with RubyGems >= 0.9.5 and take advantage of new platform and auto-install features.  See notes at http://geminstaller.rubyforge.org/code/index.html#rubygems_compatibility
* On Linux/Mac, you can now specify a RUBYGEMS_VERSION environment var to test against a specific version of RubyGems.
* Improved smoketest.rb and autogem_test.rb
* Tests now run on windows (only against latest rubygems, with it installed, and only via test/test_all.rb, not rake)
* deprecated/disabled prefer_binary_platform
* many other small cleanups

== 0.2.5 / 2007-10-24
* Add 'include_config' directive to yaml config file, allowing other files to be included via ERB.
* Fix broken links in docs - patch from  Maciej Kozak (macio)

== 0.2.4 / 2007-10-21
* Look for config file at config/geminstaller.yml as well as geminstaller.yml
* Make startup message ('Installing Gems...') debug level instead of info
* Add custom descriptive error if user gets access permission error when installing a gem

== 0.2.3 / 2007-08-03
* remove Autogem#process_gem debug statement
* Don't reset test_gem_home in test_gem_home_spec, shaves about 18 seconds off suite
* Suppress output of rubygems installation during tests with --quiet flag

== 0.2.2 / 2007-07-07
* Fix performance problems with autogem command (don't manually recurse dependencies, gem method does it already)
* Fix bad links in docs

== 0.2.1 / 2007-06-07
* Fixes to handle internal refactoring of command classes in RubyGems 0.9.3
