@@ -1,38 +1,0 @@
-dir = File.dirname(__FILE__)
-require File.expand_path("#{dir}/../helper/spec_helper")
-
-describe "a GemCommandManager instance injected with mock dependencies" do
-  before(:each) do
-    sample_gem_name = "sample-gem"
-    install_options = ["--source", "http://gemhost"]
-    version = "1.0"
-    @sample_gem = GemInstaller::RubyGem.new(sample_gem_name, :version => version, :install_options => install_options)
-    @sample_gem_specification = Gem::Specification.new
-    @sample_gem_specification.name = sample_gem_name
-
-    @mock_gem_runner_proxy = mock("Mock GemRunnerProxy")
-    @mock_gem_spec_manager = mock("Mock GemSpecManager")
-    @mock_gem_interaction_handler = mock("Mock GemDependencyHandler")
-
-    @gem_command_manager = GemInstaller::GemCommandManager.new
-    @gem_command_manager.gem_runner_proxy = @mock_gem_runner_proxy
-    @gem_command_manager.gem_spec_manager = @mock_gem_spec_manager
-    @gem_command_manager.gem_interaction_handler = @mock_gem_interaction_handler
-    @escaped_sample_gem_name = @sample_gem.regexp_escaped_name
-    
-  end
-
-  it "should be able to install a gem which is not already installed" do
-    @mock_gem_spec_manager.should_receive(:is_gem_installed?).once.with(@sample_gem).and_return(false)
-    @mock_gem_runner_proxy.should_receive(:run).once.with(anything())
-    @mock_gem_interaction_handler.should_receive(:dependent_gem=).with(@sample_gem)
-    @gem_command_manager.install_gem(@sample_gem)
-  end
-  
-  it "should not attempt to install a gem which is already installed" do
-    error_message = "error message"
-    @mock_gem_spec_manager.should_receive(:is_gem_installed?).once.with(@sample_gem).and_return(true)
-    @gem_command_manager.install_gem(@sample_gem)
-  end
-
-end
